--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 html, body {
     height: 100%;
     font: 100% 'Ubuntu', sans-serif;
-    /*background: #fefefe;*/
+    background: #fefefe;
 }
 
 a {
@@ -45,10 +45,6 @@ a {
     background: #E57373;
 }
 
-.divider {
-    margin-top: 32px;
-}
-
 #main {
     background-color: #fefefe;
 }
@@ -60,13 +56,15 @@ a {
 }
 
 /*SIDEBAR CSS*/
-#sidebar {
+.sidebar {
     color: #ffffff;
     background-color: transparent;
     text-shadow: 1px 0 1px #888888;
+    text-align: center;
+    margin: 0 auto;
 }
 
-#sidebar-footer {
+.sidebar-footer {
     position: absolute;
     bottom: 5px;
 }
@@ -80,10 +78,8 @@ a {
 }
 
 .sidebar-top img {
-    width: 75%;
+    width: 70%;
     padding: 1em;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .sidebar-top p {
@@ -107,7 +103,7 @@ a {
 }
 
 .sidebar-nav {
-    margin: 5px 0 0;
+    margin: 20px 0;
     padding: 0;
     list-style: none;
     text-align: center;
@@ -152,32 +148,93 @@ a {
     margin-bottom: 20px;
 }
 
-/* center and adjust the sidebar contents on smaller devices */
-@media (max-width: 768px) {
-    #sidebar, #sidebar a.logo {
-        text-align: center;
-        margin: 0 auto;
-        margin-top: 30px;
-        font-size: 26px;
-    }
-
-    #sidebar a.logo {
-        font-size: 50px;
-        height: 75px;
-        width: 75px;
-        margin-bottom: 30px;
-    }
-}
-
 /* Content CSS */
 
 .section-title-background {
     background: #C54C4C;
     color: #FFF;
-    padding: 8px 30px 8px 30px;
+    padding: 8px 100px 8px 30px;
     display: inline-block;
-    border-radius: 20px;
+    border-radius: 15px 0px;
+    text-transform: uppercase;
+    font-size: 1em;
 }
+
+/*Circle Shape div*/
+.circle {
+    margin: 0 auto;
+    border-radius: 50%;
+    width: 65%;
+    position: relative;
+    background-color: #E57373;
+}
+
+.circle-border {
+    border: 2px solid #E57373;
+}
+
+.circle-solid{
+    background-color: #E57373;
+}
+
+.circle:before {
+    content: "";
+    display: block;
+    padding-top: 100%;
+}
+
+.circle-inner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    text-align: center;
+}
+
+/*class for the text inside the circle*/
+.score-text {
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    /*height: 1em;
+    line-height: 1em;
+    font-size: 1em;*/
+    color: #FFECB3;
+    height: 1vw;
+    line-height: 1vw;
+    font-size: 1vw;
+}
+
+.score-text span {
+    font-size: 1.5em;
+    font-weight: bold;
+    color: #ffffff;
+}
+
+/*bootstrap progress*/
+.progress {
+    position: relative;
+    height: 25px;
+}
+.progress > .progress-type {
+    position: absolute;
+    left: 0px;
+    font-weight: 800;
+    padding: 3px 30px 2px 10px;
+    color: rgb(255, 255, 255);
+    background-color: rgba(25, 25, 25, 0.2);
+}
+.progress > .progress-completed {
+    position: absolute;
+    right: 0px;
+    font-weight: 800;
+    padding: 3px 10px 2px;
+}
+/*bootstrap progress (END)*/
 
 /* bootstrap overrides */
 .jumbotron {
@@ -204,4 +261,31 @@ a {
 
 small.text-muted {
     font-family: courier, courier-new, monospace;
+}
+
+
+/* center and adjust the sidebar contents on smaller devices */
+@media (max-width: 768px) {
+    .sidebar {
+        text-align: center;
+        margin: 0 auto;
+        margin-top: 15px;
+        font-size: 1em;
+    }
+
+    .circle {
+        width: 100%;
+    }
+
+    .score-text {
+        height: 1em;
+        line-height: 1em;
+        font-size: 1em;
+    }
+
+    /*.score-text span {
+        font-size: 1em;
+        font-weight: bold;
+        color: #ffffff;
+    }*/
 }
