--- a/css/styles.css
+++ b/css/styles.css
@@ -143,9 +143,11 @@ a {
 
 /*SIDEBAR*/
 
-
+.copywrite {
+    margin-bottom: 20px;;
+}
 #footer {
-    margin-bottom: 20px;
+    /*margin-bottom: 20px;*/
 }
 
 /* Content CSS */
@@ -235,6 +237,52 @@ a {
     padding: 3px 10px 2px;
 }
 /*bootstrap progress (END)*/
+
+/*Contact Form CSS*/
+.contact-grid form {
+    padding: 2em 0 0 2em;
+}
+
+.contact-grid input[type="text"], .contact-grid textarea {
+    width: 80%;
+    padding: 0.7em;
+    margin: 0.5em 0;
+    background: none;
+    outline: none;
+    border: 1px solid #A09F9F;
+    font-size: 1em;
+    color: #A09F9F;
+    -webkit-appearance: none;
+}
+
+.send input[type="submit"] {
+    width: 14%;
+    font-size: 1.1em;
+    background: #e9a820;
+    padding: 0.4em 0.8em;
+    text-align: center;
+    color: #fff;
+    border: none;
+    outline: none;
+    -webkit-appearance: none;
+}
+
+.send input[type="submit"]:hover {
+    background: #6ecadc;
+}
+
+.contact-grid textarea {
+    resize: none;
+}
+
+.map {
+    padding: 2em 0 0 2em;
+}
+
+.map iframe {
+    width: 80%;
+    border: none;
+}
 
 /* bootstrap overrides */
 .jumbotron {
